# RTinaWeek

./: CMakeLists.txt
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  material.hpp  ray.hpp  sphere.hpp  utility.hpp  vec3.hpp
src/: camera.cpp  color.cpp  hittable.cpp  hittable_list.cpp  main.cpp  ray.cpp  sphere.cpp  vec3.cpp
